--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
         <h1>Thomas And Anderson 2028 Presidential Election</h1>
         </br>
         <p>
-            <h1>Goals and Actions</h1>
+            <h1><ul>>Goals and Actions</ul></h1>
+            We as your future administration want to impose new standards
+            on the laws of drinking, and we believe that the alcohol use age
+            should be brought down to 18 years of age in all fifty states.
             
+            We feel that if you can serve in our military and protect our country
+            you damn sure should be able to get a drink when you are in our country!
+
+            We also want to impose new laws on illegal immigration and the only people
+            that can be allowed in this country are grey aliens from Mars, this is to impose
+            a more indept approach to fixing our infrastrucutre to make sure 
+            we can MAKE THE RES GREAT AGAIN!
         </p>
     </body>
 </html>
