Fix a small bug

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <h1>Thomas And Anderson 2028 Presidential Election</h1>
         </br>
         <p>
-            <h1><ul>>Goals and Actions</ul></h1>
+            <h1><ul>Goals and Actions</ul></h1>
             We as your future administration want to impose new standards
             on the laws of drinking, and we believe that the alcohol use age
             should be brought down to 18 years of age in all fifty states.
