--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <!-- Adding a great video as the background -->
+         <video Autoplay for the president
+         id="background-video"
+         poster="https://www.instagram.com/p/DTWtohrjty4/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
+    
+        </video>
         <h1>Thomas And Anderson 2028 Presidential Election</h1>
         </br>
         <p>
