Added to the UI

--- a/index.html
+++ b/index.html
@@ -39,4 +39,7 @@
             <script async src="//www.instagram.com/embed.js"></script>
         </body>
     </head>
+    <div class="bottom-page-info"
+    <h6>ThomasAndAnderson Presidential 2026 All Rights Reserved</h6>
+    </div>
 </html>
