--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
             <div class="In-Your-Face-content">
                 <!-- Adding a great video as the background -->
                 <video autoplay muted loop playsinline id="Background Video"
-                poster="image/Thomas2028">
+                poster="images/Screenshot 2026-01-10 232458.png">
 
-                <source src="https://www.youtube.com/watch?v=dx7CNovrg-A" />
+                <source src="" />
 
                 Your browser does not support the video tag
 
