Added more prettyness

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     a more indept approach to fixing our infrastrucutre to make sure 
                     we can MAKE THE RES GREAT AGAIN!
                 </p>
+
+            </div>
+
+            <div class="Small-Info">
+                <h2> President and VP Candiates</h2>
             </div>
             <div class="Presidents-and-VP">
             <!-- Image of the president -->
