--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        body {
+        background-image: url('images/GiggaChad.png');
+        background-size: contain;
+        background-position: center;
+        background-attachment: scroll;
+        z-index: -1;
+    }
+
+    </style>
     <head>
         <link rel="stylesheet" href="styles.css">
 
