--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <style>
         body {
-        background: url(./images/GiggaChad.png);
+        background-image: url(./images/GiggaChad.png);
         background-size: contain;
         background-position: center;
         background-attachment: scroll;
