Added more things

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <link rel="stylesheet" href="styles.css">
 
         <body>
+            <div class="topnav">
+                <a href="#home" src="index.html">Home</a>
+                <a href="#AboutUs">About Us</a>
+                <a href="#Socials">Socials</a>
+            </div>
             <div class="In-Your-Face-content">
                 
                 <h1>Thomas And Anderson 2028 Presidential Election</h1>
@@ -57,8 +62,10 @@
                 <!--
                 First twitter post made by our future president!
                 -->
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">As the next president of the United states I will allow more ability for strip dancers to make more money and their tips to be exempt from the US tax code!<a href="https://twitter.com/hashtag/FuckTrump?src=hash&amp;ref_src=twsrc%5Etfw">#FuckTrump</a><a href="https://twitter.com/hashtag/FuckTimWalz?src=hash&amp;ref_src=twsrc%5Etfw">#FuckTimWalz</a><a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a> <a href="https://twitter.com/hashtag/KPOPDEMONHUNTERS?src=hash&amp;ref_src=twsrc%5Etfw">#KPOPDEMONHUNTERS</a></p>&mdash; ThomasAndAnderson2028 (@TAnderson284003) <a href="https://twitter.com/TAnderson284003/status/2010241258846146745?ref_src=twsrc%5Etfw">January 11, 2026</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+               <!-- <blockquote class="twitter-tweet"><p lang="en" dir="ltr">As the next president of the United states I will allow more ability for strip dancers to make more money and their tips to be exempt from the US tax code!<a href="https://twitter.com/hashtag/FuckTrump?src=hash&amp;ref_src=twsrc%5Etfw">#FuckTrump</a><a href="https://twitter.com/hashtag/FuckTimWalz?src=hash&amp;ref_src=twsrc%5Etfw">#FuckTimWalz</a><a href="https://twitter.com/hashtag/FreePalestine?src=hash&amp;ref_src=twsrc%5Etfw">#FreePalestine</a> <a href="https://twitter.com/hashtag/KPOPDEMONHUNTERS?src=hash&amp;ref_src=twsrc%5Etfw">#KPOPDEMONHUNTERS</a></p>&mdash; ThomasAndAnderson2028 (@TAnderson284003) <a href="https://twitter.com/TAnderson284003/status/2010241258846146745?ref_src=twsrc%5Etfw">January 11, 2026</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            -->
             </div>
+
         </body>
     </head>
     <div class="bottom-page-info">
