Added a shit ton more things

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./CSS/styles.css">
 
         <body>
             <div class="topnav">
-                <a href="#home" src="index.html">Home</a>
-                <a href="#AboutUs">About Us</a>
-                <a href="#Socials">Socials</a>
+                <a href="./index.html">Home</a>
+                <a href="./AboutUs.html">About Us</a>
+                <a href="./Socials.html">Socials</a>
             </div>
             <div class="In-Your-Face-content">
                 
