--- a/Socials.html
+++ b/Socials.html
@@ -15,6 +15,13 @@
                 <h1>Follow us On Our Socials!</h1>
 
             </div>
+            <div class="SocialsClass">
+                <img src="./Images/instagram-3d-illustration-free-png.png">
+                <button>
+                    <h3>Instagram Page</h3>
+                    <a href="https://www.instagram.com/thomas_anderson.2028/"/>
+                </button>
+            </div>
         </body>
     </head>
     <div class="bottom-page-info">
