Fixed some syntax

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
             -->
             </div>
 
+            <div class="In-Your-Face-content">
+                <h1>Purpose</h1>
+                <p>
+                    Our purpose of this msision is to unite the people
+                    of the United States with more booze and tits. 
+                    </br>
+                    As your future POTUS I will make sure that big booty Latinas
+                    are the only ones that are to stay in this country that are illegal!
+                </p>
+            </div>
+
         </body>
     </head>
     <div class="bottom-page-info">
