--- a/Socials.html
+++ b/Socials.html
@@ -17,8 +17,9 @@
             </div>
             <div class="SocialsClass">
                 <button>
-                    <img src="./Images/instagram-3d-illustration-free-png.png">
-                    <a href="https://www.instagram.com/thomas_anderson.2028/"/>
+                    <a href="https://www.instagram.com/thomas_anderson.2028">
+                        <img src="./Images/instagram-3d-illustration-free-png.png" />
+                    </a>
                 </button>
             </div>
         </body>
