More fucking things

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 <a href="./index.html">Home</a>
                 <a href="./AboutUs.html">About Us</a>
                 <a href="./Socials.html">Socials</a>
+                <a href="./MeetOurVP.html">Meet Our VP!</a>
             </div>
             <div class="In-Your-Face-content">
                 
