--- a/Socials.html
+++ b/Socials.html
@@ -7,6 +7,7 @@
             <a href="./index.html">Home</a>
             <a href="./AboutUs.html">About Us</a>
             <a href="./Socials.html">Socials</a>
+            <a href="./MeetOurVP.html">Meet Our VP!</a>
             </div>
             <!--
                 Setting the information here dawg
